# bubble-lang

./: .gitignore  .gitlab-ci.yml  Cargo.toml
bubble-dev/: Cargo.toml
bubble-dev/src/: main.rs
bubblec/: Cargo.toml
bubblec/src/: cli.rs  errors.rs  io.rs  linker.rs  main.rs  objects.rs
docker/: Dockerfile
libbubble/: Cargo.toml  build.rs
libbubble/src/: lib.rs
libbubble/src/ast/: bindable.rs  expressions.rs  location.rs  mod.rs  printer.rs  statements.rs  types.rs  visitor.rs
libbubble/src/codegen/: llvm_ir.rs  locals_collector.rs  mod.rs
libbubble/src/desugar/: for_statement.rs  mod.rs
libbubble/src/parser/: grammar.lalrpop  lexer.rs  mod.rs
libbubble/src/type_system/: binder.rs  errors.rs  inference.rs  mod.rs  rename.rs  typables.rs  type_checker.rs  type_setter.rs  utils.rs
libbubble/tests/: assets.rs  libbubble_test.rs
libbubble/tests/codegen/: mod.rs  test_translation.rs
libbubble/tests/lexer/: mod.rs  test_tokens.rs
libbubble/tests/parser/: assets.rs  mod.rs  test_expression_parsing.rs  test_statements_parser.rs
libbubble/tests/type_checking/: mod.rs  test_binder.rs  test_type_checker.rs
