[package]
name = "bubblec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbubble = { path = "../libbubble" }
inkwell = { workspace = true }
lalrpop-util = { workspace = true }
thiserror = { workspace = true }
clap = "4.5.0"
clap_derive = "4.5.0"
