[package]
name = "libbubble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.9"

[dev-dependencies]
rstest = "0.17.0"

[dependencies]
inkwell = { workspace = true }
logos = { workspace = true }
lalrpop-util = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
